# Eat-dentify

./: .breakpoints  README.md  login.py  pyproject.toml  query.py  replit.nix  users.db
.streamlit/: config.toml
pages/: eatdentify.py
tabs/: chatbot.py  foodguide.py  meal.py  profile.py  restaurant.py  sidebar.py  signup.py
unused/: login.py
utils/: article.py  config.py  constants.py  data_structures.py  google_map_api.py  llm_api.py  prompt.py  restaurant_ai.py  style.py  utils.py
